<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?selectableItemBackground"
        android:paddingHorizontal="16dp"
        android:paddingVertical="24dp">

        <ImageView
            android:id="@+id/imageViewServiceIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/ic_water_cold" />

        <TextView
            android:id="@+id/textViewServiceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/gray_dark"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/imageViewServiceIcon"
            app:layout_constraintTop_toTopOf="@id/imageViewServiceIcon"
            tools:text="Холодная вода" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/imageViewServiceIcon"
            app:layout_constraintStart_toEndOf="@id/imageViewServiceIcon"
            app:layout_constraintTop_toBottomOf="@id/textViewServiceTitle">

            <ImageView
                android:id="@+id/imageViewCodePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_code" />

            <TextView
                android:id="@+id/textViewServiceCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/gray_dark"
                android:textSize="14sp"
                tools:text="54656553" />
        </LinearLayout>

        <!--        <TextView-->
        <!--            android:id="@+id/textViewServiceNewData"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="24dp"-->
        <!--            android:text="@string/text_view_service_new_data"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/imageViewServiceIcon" />-->

        <!--        <EditText-->
        <!--            android:id="@+id/editTextServiceNewData"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginEnd="20dp"-->
        <!--            android:hint="35"-->
        <!--            app:layout_constraintEnd_toStartOf="@id/buttonServiceSendData"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/textViewServiceNewData" />-->
        <LinearLayout
            android:id="@+id/linearLayoutServiceNewData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@id/buttonServiceSendData"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewServiceIcon">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingHorizontal="4dp">

                <TextView
                    style="@style/TextStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_electro_service_day_data" />

                <EditText
                    android:id="@+id/editTextServiceNewDayData"
                    style="@style/TextStyleHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="35" />


            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingHorizontal="4dp">

                <TextView
                    style="@style/TextStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_electro_service_night_data" />

                <EditText
                    android:id="@+id/editTextServiceNewNightData"
                    style="@style/TextStyleHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="35" />


            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingHorizontal="4dp">

                <TextView
                    style="@style/TextStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_electro_service_pick_data" />

                <EditText
                    android:id="@+id/editTextServiceNewPickData"
                    style="@style/TextStyleHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="35" />


            </androidx.appcompat.widget.LinearLayoutCompat>
        </LinearLayout>

        <ImageButton
            android:id="@+id/buttonServiceContextMenu"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="?selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_more"
            app:tint="@color/gray" />

        <ImageButton
            android:id="@+id/buttonServiceInfo"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="?selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toStartOf="@id/buttonServiceContextMenu"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_info"
            app:tint="@color/gray" />

        <ImageButton
            android:id="@+id/buttonServiceSendData"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="?selectableItemBackgroundBorderless"
            app:layout_constraintBottom_toBottomOf="@id/linearLayoutServiceNewData"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_send" />

        <TextView
            android:id="@+id/textViewServiceDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/gray_dark"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/linearLayoutServiceNewData"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutServiceNewData"
            tools:text="Необходимо подать показания до 25.03.18" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>